--- a/body.html
+++ b/body.html
@@ -40,7 +40,7 @@
 
         <div class="hero-img">
           <button id="toggleButton" onclick="showImage()">Show Image</button>
-          <img id="myImage" src="https://images.sftcdn.net/images/t_app-icon-m/p/8831609a-96d1-11e6-a8a2-00163ec9f5fa/1024827454/sketchup-pro-icon.png" alt="My Image">
+          <img id="myImage" src="imag/5E98361D-D180-49A9-9AA0-58A78A0EBFCB.jpg" alt="My Image">
         </div>
      </div>
     </div>
