--- a/body.html
+++ b/body.html
@@ -41,7 +41,7 @@
 
         <div class="hero-img">
           <button id="toggleButton" onclick="showImage()">Show Image</button>
-          <img id="myImage" src="imag/5E98361D-D180-49A9-9AA0-58A78A0EBFCB.jpg" alt="myImage">
+          <img id="myImage" src="imag/5E98361D-D180-49A9-9AA0-58A78A0EBFCB.jpg" alt="My Image">
         </div>
      </div>
     </div>
