--- a/body.html
+++ b/body.html
@@ -130,7 +130,7 @@
   <div class="port">
     <div class="port-all">
       <h2>EXPERIENCE</h2>
-      <img src="c:\เกรียรติบัตร\2023-09-01_072282_edit_165337690170083.jpg" alt="">
+      <img src="imag/2023-09-01_072282_edit_165337690170083.jpg"" alt="">
       <p>ผ่านการอบรมค่ายโอลิมปิกวิชาการค่าย 1 สอวน คอมพิวเตอร์</p>
     </div>
     <div class="port-all">
