--- a/body.html
+++ b/body.html
@@ -135,7 +135,7 @@
     </div>
     <div class="port-all">
       <h2>RESEARCH</h2>
-      <img src="c:\เกรียรติบัตร\รูปจ้าา\S__7593988.jpg" alt="">
+      <img src="imag/S__7593988.jpg" alt="">
       <p>โครงงานวิทยาศาสตร์ ในการประชุมวิชาการวิทยาาศาสตร์ คณณิตศาสตร์ เเละเทคโนโลยี โครงการห้องเรียน พสวท.(สู่ความเป็นเลิศ) ระดับชาติ สาขาคอมพิวเตอร์ เรื่องแบบจำลองแจ้งเตือนระดับน้ำและอุณหภูมิสำหรับบ่อเพาะพันธ์ุกบ </p>
       <a href="imag/PT_thai_com_poster02.png" target="_blank" class="port-btn">POSTER</a>
     </div>
