--- a/body.html
+++ b/body.html
@@ -41,7 +41,7 @@
 
         <div class="hero-img">
           <button id="toggleButton" onclick="showImage()">Show Image</button>
-          <img id="myImage" src="imag/D48255F1-BE82-4B63-BB1F-D52D8B21A549.JPG" alt="My Image">
+          <img id="myImage" src="imag/2023-09-01_072282_edit_165337690170083.jpg" alt="My Image">
         </div>
      </div>
     </div>
